@@ -4,8 +4,8 @@
    dimC = 6
    calculation_type = 'bulk'
    ne = 1000
-   emin = -10.0
-   emax = 5.0
+   emin = -8.0
+   emax = 2.0
    datafile_C = "./SCRATCH/pt_h2_pt_WanT.ham"
    transport_dir = 3
    do_eigenchannels = .TRUE.
